# Valence

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codspeed.yml  performance.yml  quality.yml  release.yml
benches/: molecular_bench.rs  molecular_bench_iai.rs  physics_bench.rs  scaling_bench.rs
examples/: profile_engine.rs
python/hadronis/: engine.py
python/valence/: __init__.py  core.py  engine.py  molecule.py
scripts/: stress_tests.py
src/: engine.rs  lib.rs
src/core/: connectivity.rs  mod.rs  model.rs
tests/: test_core.py  test_import.py
