[package]
name = "valence"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"  # <--- Add this line

[lib]
# This name must match the name in your #[pymodule] in lib.rs
name = "valence"
crate-type = ["cdylib", "rlib"]



[dependencies]
# The bridge between Rust and Python
pyo3 = { version = "0.27", features = ["extension-module"] } # High-performance math
numpy = "0.27"
nalgebra = "0.32.0" # This is the gold standard for robotics/physics geometry
rayon = "1.8"
rand = "0.9.2"
tracy-client = { version = "0.17", optional = true }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
numpy = "0.27"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"

[[bench]]
name = "molecular_bench"
harness = false

[profile.release]
debug = true
force-frame-pointers = true
lto = "thin"

[[example]]
name = "profile_engine"
path = "examples/profile_engine.rs"

[features]
tracy = ["tracy-client"]
