[package]
name = "valence"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"  # <--- Add this line

[lib]
# This name must match the name in your #[pymodule] in lib.rs
name = "valence"
crate-type = ["cdylib", "rlib"]



[dependencies]
# The bridge between Rust and Python
pyo3 = { version = "0.27", features = ["extension-module"] } # High-performance math
numpy = "0.27"
nalgebra = "0.32.0" # This is the gold standard for robotics/physics geometry
rayon = "1.8"
rand = "0.9.2"
tracy-client = { version = "0.17", optional = true }
hdrhistogram = "7.5.4"
plotters = "0.3.7"
codspeed-criterion-compat = { version = "4.3.0", optional = true }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
numpy = "0.27"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"
iai-callgrind = "0.16.1"


[[bench]]
name = "molecular_bench"
harness = false

[[bench]]
name = "scaling_bench"
path = "benches/scaling_bench.rs"
harness = false

[profile.release]
debug = true
force-frame-pointers = true
lto = "thin"


[profile.bench]
inherits = "release"
lto = "thin"          # Link Time Optimization: merges units for better inlining
codegen-units = 1     # Slower build, but results in faster code
debug = true          # Keep symbols so Flamegraph/Tracy can see function names

[[example]]
name = "profile_engine"
path = "examples/profile_engine.rs"

[features]
tracy = ["tracy-client"]
codspeed = ["dep:codspeed-criterion-compat"]
